--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML5 Website with Bootstrap | Responsive Website Design</title>
+    <title>Vines Commerce – Develop Your Global Amazon Business</title>
     <link rel="shortcut icon" href="img/favicon.ico" />
     <!-- Bootstrap 4.5 CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   </head>
   <body>
     <!-- Top Bar -->
@@ -48,7 +49,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"
-              ><a href="index.html" class="nav-link">About Us</a></li
+              ><a href="" class="nav-link">About Us</a></li
             >
             <li class="nav-item"><a href="" class="nav-link">Services</a></li>
             <li class="nav-item"
@@ -57,7 +58,7 @@
             <li class="nav-item"><a href="" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="" class="nav-link">Our Team</a></li>
             <li class="nav-item"><a href="" class="nav-link">Career</a></li>
-            <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="contact-us.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -133,14 +134,14 @@
 
     <!-- section 2 svg -->
     <div class="container" style="margin-bottom: 20px"
-      ><img src="img/section-1-svg.png" alt="" class="w-100 h-100"
+      ><img src="img/svg/optimised-20.svg" alt="" class="w-100 h-100"
     /></div>
 
     <!-- end section2 svg -->
 
     <!-- section 2 svg -->
-    <div class="container"
-      ><img src="img/section-2.png" alt="" class="w-100 h-100"
+    <div class=""
+      ><img src="img/svg/SVG 1-05.svg" alt="" class="w-100 h-100"
     /></div>
 
     <!-- end section2 svg -->
@@ -339,13 +340,19 @@
             >
           </div>
           <div class="col-lg-8"
-            ><img src="img/full-stack-01.png" alt="" class="w-100 h-100"
+            ><img
+              src="img/business-people-meeting-min.jpg"
+              alt=""
+              class="w-100 h-100"
           /></div>
         </div>
 
         <div class="row mt-3">
           <div class="col-lg-8"
-            ><img src="img/full-stack-02.png" alt="" class="w-100 h-100"
+            ><img
+              src="img/close-up-businessman-with-digital-tablet-min.jpg"
+              alt=""
+              class="w-100 h-100"
           /></div>
           <div class="col-lg-4 mb-4 my-lg-auto">
             <h1 class="text-dark font-weight-bold mb-3"
@@ -366,7 +373,7 @@
     <!-- full stack section end -->
     <!-- back ground laptop img -->
     <div class="">
-      <img src="img/laptopbg.png" alt="" class="custom-fixed" />
+      <img src="img/Imac-2-min.jpg" alt="" class="custom-fixed" />
     </div>
 
     <!-- end backgorund laptop img -->
@@ -380,39 +387,47 @@
     </div>
 
     <!-- Three Column Section -->
-    <div class="container">
-      <div class="row my-5">
-        <div class="col-md-4 text-center my-4">
-          <img
-            src="img/1.jpg"
-            alt=""
-            class="w-100 align-self-center shadow-4-strong"
-          />
-          <h4 class="my-4">"Amazing. Incredible."</h4>
-          <p
-            >Use the adjective amazing to describe something that is so good, it
-            surprises you, like the amazing beauty of the Rocky Mountains.</p
-          >
-        </div>
-        <!-- 2nd data -->
-        <div class="col-md-4 text-center my-4">
-          <img src="img/2.jpg" alt="" class="w-100 align-self-center" />
-          <h4 class="my-4">"Amazing. Incredible."</h4>
-          <p
-            >Use the adjective amazing to describe something that is so good, it
-            surprises you, like the amazing beauty of the Rocky Mountains.</p
-          >
-        </div>
-        <!-- 3rd data -->
-        <div class="col-md-4 text-center my-4">
-          <img src="img/3.jpg" alt="" class="w-100 align-self-center" />
-          <h4 class="my-4">"Amazing. Incredible."</h4>
-          <p
-            >Use the adjective amazing to describe something that is so good, it
-            surprises you, like the amazing beauty of the Rocky Mountains.</p
-          >
+    <div class="container slide-container swiper">
+      <div class="row my-5 slide-content">
+        <div class="swiper-wrapper">
+          <div class="col-md-4 text-center swiper-slide my-4">
+            <img
+              src="img/1.jpg"
+              alt=""
+              class="w-100 align-self-center shadow-4-strong"
+            />
+            <h4 class="my-4">"Amazing. Incredible."</h4>
+            <p
+              >Use the adjective amazing to describe something that is so good,
+              it surprises you, like the amazing beauty of the Rocky
+              Mountains.</p
+            >
+          </div>
+          <!-- 2nd data -->
+          <div class="col-md-4 text-center swiper-slide my-4">
+            <img src="img/2.jpg" alt="" class="w-100 align-self-center" />
+            <h4 class="my-4">"Amazing. Incredible."</h4>
+            <p
+              >Use the adjective amazing to describe something that is so good,
+              it surprises you, like the amazing beauty of the Rocky
+              Mountains.</p
+            >
+          </div>
+          <!-- 3rd data -->
+          <div class="col-md-4 text-center swiper-slide my-4">
+            <img src="img/3.jpg" alt="" class="w-100 align-self-center" />
+            <h4 class="my-4">"Amazing. Incredible."</h4>
+            <p
+              >Use the adjective amazing to describe something that is so good,
+              it surprises you, like the amazing beauty of the Rocky
+              Mountains.</p
+            >
+          </div>
         </div>
       </div>
+      <div class="swiper-button-next swiper-navBtn"></div>
+      <div class="swiper-button-prev swiper-navBtn"></div>
+      <div class="swiper-pagination"></div>
     </div>
 
     <!-- End Boost your amazon -->
@@ -674,4 +689,9 @@
 
     <!-- End Script Source Files -->
   </body>
+  <!-- Swiper JS -->
+  <script src="js/swiper-bundle.min.js"></script>
+
+  <!-- JavaScript -->
+  <script src="js/script.js"></script>
 </html>
