--- a/index.html
+++ b/index.html
@@ -18,17 +18,32 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+      integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   </head>
   <body>
+    <!-- flooting button -->
+    <button
+      type="button"
+      class="btn btn-danger btn-floating btn-lg"
+      id="btn-back-to-top"
+    >
+      <i class="fas fa-arrow-up"></i>
+    </button>
     <!-- Top Bar -->
-    <div class="top-bar">
+    <!-- <div class="top-bar">
       <div class="container">
         <div class="col-12 text-right">
           <p><a href="tel:+18885555555">Call us at 1 (800) HTML - CSS</a></p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- End Top Bar -->
 
@@ -48,9 +63,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"
-              ><a href="" class="nav-link">About Us</a></li
-            >
+            <li class="nav-item"><a href="" class="nav-link">About Us</a></li>
             <li class="nav-item"><a href="" class="nav-link">Services</a></li>
             <li class="nav-item"
               ><a href="" class="nav-link">Case Studies</a></li
@@ -58,7 +71,9 @@
             <li class="nav-item"><a href="" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="" class="nav-link">Our Team</a></li>
             <li class="nav-item"><a href="" class="nav-link">Career</a></li>
-            <li class="nav-item"><a href="contact-us.html" class="nav-link">Contact</a></li>
+            <li class="nav-item"
+              ><a href="contact-us.html" class="nav-link">Contact</a></li
+            >
           </ul>
         </div>
       </div>
@@ -210,7 +225,27 @@
             alt=""
             class="data-vines-circular align-self-center shadow-4-strong"
           />
-          <h4 class="my-4">"Amazing. Incredible."</h4>
+          <p class="my-4 custom-heading-yellow">
+            $2
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-arrow-right"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
+              />
+            </svg>
+            $500
+          </p>
+
+          <div class="custom-heading-5"> how we helped turner </div>
+          <div class="custom-heading-5"> To make 100$ in one month </div>
+
           <p
             >Use the adjective amazing to describe something that is so good, it
             surprises you, like the amazing beauty of the Rocky Mountains.</p
@@ -220,11 +255,31 @@
         <!-- 2nd data -->
         <div class="col-md-4 text-center my-4">
           <img
-            src="img/2.jpg"
+            src="img/1.jpg"
             alt=""
-            class="data-vines-circular align-self-center"
+            class="data-vines-circular align-self-center shadow-4-strong"
           />
-          <h4 class="my-4">"Amazing. Incredible."</h4>
+          <p class="my-4 custom-heading-yellow">
+            $2
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-arrow-right"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
+              />
+            </svg>
+            $500
+          </p>
+
+          <div class="custom-heading-5"> how we helped turner </div>
+          <div class="custom-heading-5"> To make 100$ in one month </div>
+
           <p
             >Use the adjective amazing to describe something that is so good, it
             surprises you, like the amazing beauty of the Rocky Mountains.</p
@@ -234,11 +289,31 @@
         <!-- 3rd data -->
         <div class="col-md-4 text-center my-4">
           <img
-            src="img/3.jpg"
+            src="img/1.jpg"
             alt=""
-            class="data-vines-circular align-self-center"
+            class="data-vines-circular align-self-center shadow-4-strong"
           />
-          <h4 class="my-4">"Amazing. Incredible."</h4>
+          <p class="my-4 custom-heading-yellow">
+            $2
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-arrow-right"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
+              />
+            </svg>
+            $500
+          </p>
+
+          <div class="custom-heading-5"> how we helped turner </div>
+          <div class="custom-heading-5"> To make 100$ in one month </div>
+
           <p
             >Use the adjective amazing to describe something that is so good, it
             surprises you, like the amazing beauty of the Rocky Mountains.</p
@@ -561,12 +636,12 @@
           <a href="" class="me-4 text-reset">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="" class="me-4 text-reset">
+          <!-- <a href="" class="me-4 text-reset">
             <i class="fab fa-twitter"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
+          </a> -->
+          <!-- <a href="" class="me-4 text-reset">
             <i class="fab fa-google"></i>
-          </a>
+          </a> -->
           <a href="" class="me-4 text-reset">
             <i class="fab fa-instagram"></i>
           </a>
@@ -590,7 +665,7 @@
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
               <!-- Content -->
               <h6 class="text-uppercase fw-bold mb-4">
-                <i class="fas fa-gem me-3"></i>Company name
+                <i class="fas fa-gem me-3"></i> Vines Commerce
               </h6>
               <p>
                 Here you can use rows and columns to organize your footer
@@ -603,18 +678,18 @@
             <!-- Grid column -->
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
               <!-- Links -->
-              <h6 class="text-uppercase fw-bold mb-4"> Products </h6>
+              <h6 class="text-uppercase fw-bold mb-4"> Services </h6>
               <p>
-                <a href="#!" class="text-reset">Angular</a>
+                <a href="#!" class="text-reset">DropShipping</a>
               </p>
               <p>
-                <a href="#!" class="text-reset">React</a>
+                <a href="#!" class="text-reset">DropShipping</a>
               </p>
               <p>
-                <a href="#!" class="text-reset">Vue</a>
+                <a href="#!" class="text-reset">DropShipping</a>
               </p>
               <p>
-                <a href="#!" class="text-reset">Laravel</a>
+                <a href="#!" class="text-reset">DropShipping</a>
               </p>
             </div>
             <!-- Grid column -->
@@ -664,7 +739,7 @@
       >
         © 2022 Copyright:
         <a class="text-reset fw-bold" href="https://mdbootstrap.com/"
-          >MDBootstrap.com</a
+          >Vines Commerece</a
         >
       </div>
       <!-- Copyright -->
