--- a/index.html
+++ b/index.html
@@ -155,10 +155,38 @@
     <!-- end section2 svg -->
 
     <!-- section 2 svg -->
-    <div class=""
-      ><img src="img/svg/SVG 1-05.svg" alt="" class="w-100 h-100"
-    /></div>
+    <div><img src="img/svg/SVG 1-05.svg" alt="" class="w-100 h-100" /></div>
 
+    <div class="container text-center ">
+      <div class="row my-5">
+        <div class="col-md-4 text-center my-4">
+          <img
+            src="img/svg/1-17.svg"
+            alt=""
+            class="data-vines-circular align-self-center shadow-4-strong"
+          />
+        </div>
+        <!-- 2nd data -->
+        <div class="col-md-4 text-center my-4">
+          <img
+            src="img/svg/1-18.svg"
+            alt=""
+            class="data-vines-circular align-self-center shadow-4-strong"
+          />
+        </div>
+        <!-- 3rd data -->
+        <div class="col-md-4 text-center my-4">
+          <img
+            src="img/svg/1-19.svg"
+            alt=""
+            class="data-vines-circular align-self-center shadow-4-strong"
+          />
+        </div>
+      </div>
+      <div class="factory-div">
+        All Factors contribute in success
+      </div>
+    </div>
     <!-- end section2 svg -->
 
     <!-- starting jungle section -->
