svgs isssue resolved and counter added

--- a/index.html
+++ b/index.html
@@ -131,15 +131,16 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-lg-4 col-xl-4 pt-4">
-            <div class="text-center font-weight-bold">57</div>
+            <div class="text-center font-weight-bold counter"> <div class="timer count-title count-number" data-to="57" data-speed="50"><div></div></div></div>
             <div class="text-center">Employees</div>
           </div>
           <div class="col-md-4 col-lg-4 col-xl-4 pt-4">
-            <div class="text-center font-weight-bold">$570000</div>
+            <div class="text-center font-weight-bold counter"> <div class="timer count-title count-number" data-to="57000" data-speed="1500"><div>$</div></div></div>
+            
             <div class="text-center">Revenue Mangaed</div>
           </div>
           <div class="col-md-4 col-lg-4 col-xl-4 pt-4">
-            <div class="text-center font-weight-bold">127</div>
+            <div class="text-center font-weight-bold counter"> <div class="timer count-title count-number" data-to="127" data-speed="50"><div></div></div></div>
             <div class="text-center">Accounts Managed</div>
           </div>
         </div>
@@ -158,33 +159,33 @@
     <!-- section 2 svg -->
     <div><img src="img/svg/SVG 1-05.svg" alt="" class="w-100 h-100" /></div>
 
-    <div class="container text-center">
-      <div class="row my-5">
-        <div class="col-md-4 text-center my-4">
+    <div class="container ">
+      <div class="row ">
+        <div class="col-md-4 " style="padding: 0px !important;">
           <img
             src="img/svg/1-17.svg"
             alt=""
-            class="data-vines-circular align-self-center shadow-4-strong"
+            class=""
           />
         </div>
         <!-- 2nd data -->
-        <div class="col-md-4 text-center my-4">
+        <div class="col-md-4" style="padding: 0px !important;">
           <img
             src="img/svg/1-18.svg"
             alt=""
-            class="data-vines-circular align-self-center shadow-4-strong"
+            class=""
           />
         </div>
         <!-- 3rd data -->
-        <div class="col-md-4 text-center my-4">
+        <div class="col-md-4"  style="padding: 0px !important;">
           <img
             src="img/svg/1-19.svg"
             alt=""
-            class="data-vines-circular align-self-center shadow-4-strong"
+            class=""
           />
         </div>
       </div>
-      <div class="factory-div">All Factors contribute in success</div>
+      <div class="factory-div text-center w-100" style="font-size: 1.3rem !important;">All Factors contribute in success</div>
     </div>
     <!-- end section2 svg -->
 
@@ -895,4 +896,5 @@
 
   <!-- JavaScript -->
   <script src="js/script.js"></script>
+  <script src="js/script-slider.js"></script>
 </html>
