--- a/about-us.html
+++ b/about-us.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="/index.html" class="nav-link ">Home</a>
+              <a href="/index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="/about-us.html" class="nav-link active">About Us</a>
@@ -59,12 +59,107 @@
       </div>
     </nav>
 
+    <section class="single-page-header">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="text-center">About Us</h2>
+            <ol class="breadcrumb header-bradcrumb justify-content-center">
+              <li class="breadcrumb-item">
+                <a href="index.html" class="text-white">Home</a>
+              </li>
+              <li class="breadcrumb-item active" aria-current="page">
+                About Us
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <section class="about-shot-info section-sm">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 mt-20">
+            <h2 class="mb-3">
+              We make business better
+              <br />
+              by delivering reliable assistance
+            </h2>
+            <p>
+              At Vinescommerce we’ve made the deep decision because our work is
+              digital and we use the Slack platform for all communication, we’re
+              able to select the best people all over the world who are most
+              qualified for their positions.
+            </p>
+            <p>
+              As a result, our team is full of people with advanced degrees and
+              years of industry-not just agency experience. Through being
+              location-agnostic and casting a wide net for talent, our Amazon
+              agency expertise gets real results for our clients.
+            </p>
+          </div>
+          <div class="col-lg-6 mt-4 mt-lg-0">
+            <img
+              loading="lazy"
+              class="img-fluid"
+              src="images/company/company-image.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <section class="company-mission section-sm bg-gray">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Who We are</h3>
+            <p>
+              Millions of dollars in monthly sales managed for Amazon Vendor and
+              Seller accounts. Every action taken is carefully calculated to get
+              the goal maximizing clients return on their eCommerce channel
+              investments. A distributed team with diverse experience and
+              concentrated expertise
+            </p>
+            <img
+              loading="lazy"
+              src="images/company/company-image-2.jpg"
+              alt=""
+              class="img-fluid mt-30"
+            />
+          </div>
+          <div class="col-md-6 mt-5 mt-md-0">
+            <h3>Interested? Let's get in touch!</h3>
+            <p>
+              Vinescommerce is a fully packed practical team to dealwith Amazon
+              and its latest e-commerce trends.
+            </p>
+            <img
+              loading="lazy"
+              src="images/company/company-image-3.jpg"
+              alt=""
+              class="img-fluid mt-30"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <!--
+    Start Call To Action
+    ==================================== -->
 
+    <!-- End section -->
 
-    
+    <!-- Start Our Team
+
+   
+    Start Call To Action
+    ==================================== -->
+
+    <!-- End section -->
 
     <script src="js/jquery-3.5.1.min.js"></script>
     <!-- Bootstrap 4.5 JS -->
@@ -74,13 +169,10 @@
     <!-- Font Awesome -->
     <script src="js/all.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
-</body>
-    <!-- section amazon services -->
+  </body>
+  <!-- section amazon services -->
 
-  
-
-    <!-- JavaScript -->
-    <script src="js/script.js"></script>
-
-
+  <!-- JavaScript -->
+  <script src="js/script.js"></script>
+  <script src="js/script-slider.js"></script>
 </html>
