--- a/about-us.html
+++ b/about-us.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a href="index.html" class="navbar-brand">
-          <img src="img/logo.png" alt="Logo" title="Logo" />
+          <img src=" img/svg/Logo.svg" alt="Logo" title="Logo" />
         </a>
         <button
           class="navbar-toggler"
