--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Vines Commerce – Develop Your Global Amazon Business</title>
-    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="shortcut icon" href="img/favicon.png" />
     <!-- Bootstrap 4.5 CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- Style CSS -->
