--- a/contact-us.html
+++ b/contact-us.html
@@ -137,7 +137,7 @@
 
         <!-- Right -->
         <div>
-          <a href="https://www.instagram.com/vinescommerce/" class="me-4 text-reset">
+          <a href="https://www.facebook.com/Vinescommerce" class="me-4 text-reset">
             <i style="width: 30px; height: 30px;" class="fab fa-facebook-f"></i>
           </a>
           <!-- <a href="" class="me-4 text-reset">
