--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
     <div class="top-bar">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 ">
+          <div class="col-md-6 row ">
             <p><a href="tel:+1 (870) 290-3081">Call us at +1 (870) 290-3081 </a></p>
+          <p> <a href="mailto:contact@vinescommerce.com" target="_blank" class="ml-4"> contact@vinescommerce.com</a> </p> 
           </div>
           <div class="col-md-6 float-right text-right ">
-            <a href="https://www.instagram.com/vinescommerce/" class="me-4 text-reset">
+            <a href="https://www.facebook.com/Vinescommerceclass="me-4 text-reset">
               <i style="width: 30px; height: 30px;" class="fab fa-facebook-f"></i>
             </a>
           
@@ -766,7 +767,7 @@
 
         <!-- Right -->
         <div>
-          <a href="https://www.instagram.com/vinescommerce/" class="me-4 text-reset">
+          <a href="https://www.facebook.com/Vinescommerce" class="me-4 text-reset">
             <i style="width: 30px; height: 30px;" class="fab fa-facebook-f"></i>
           </a>
         
